# temp-sh-bot

./: .gitignore  README.md  main.py  pyproject.toml
