[tool.poetry]
name = "temp-sh-bot"
version = "0.1.0"
description = "A temp.sh telegram wrapper"
authors = ["NotisFobbidden <fobbidennotis@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "*"
requests = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
